# Parla

./: .gitignore  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: buy-me-a-coffee.yml  release.yml
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: gpu.rs  lib.rs  main.rs  mini_recorder.rs  tray.rs  window_subclass.rs
src-tauri/src/audio/: device.rs  meters.rs  mod.rs  mute.rs  recorder.rs  resampler.rs
src-tauri/src/commands/: cloud.rs  dictionary.rs  enhancement.rs  history.rs  llm_models.rs  mod.rs  models.rs  parakeet.rs  permissions.rs  power_mode.rs  recording.rs  screen_context.rs  settings.rs  streaming.rs  transcription.rs  vad.rs
src-tauri/src/db/: mod.rs  schema.rs  transcription.rs  word_replacement.rs
src-tauri/src/enhancement/: mod.rs  model_manager.rs  output_filter.rs  prompt_detection.rs  prompts.rs  provider.rs  registry.rs  service.rs
src-tauri/src/enhancement/providers/: anthropic.rs  cerebras.rs  custom.rs  gemini.rs  groq.rs  llamacpp.rs  local_cli.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs  openrouter.rs  url_validator.rs
src-tauri/src/history/: cleanup.rs  export.rs  mod.rs
src-tauri/src/hotkeys/: keyboard_hook.rs  manager.rs  mod.rs
src-tauri/src/paste/: clipboard_backup.rs  mod.rs
src-tauri/src/power_mode/: active_window.rs  browser_url.rs  config.rs  matcher.rs  mod.rs  session.rs
src-tauri/src/screen_context/: capture.rs  mod.rs  ocr.rs  service.rs
src-tauri/src/services/: api_keys.rs  mod.rs
src-tauri/src/text_processing/: filler_words.rs  filter.rs  formatter.rs  mod.rs  word_replacement.rs
src-tauri/src/transcription/: engine.rs  mod.rs  model.rs  model_manager.rs  parakeet.rs  parakeet_model_manager.rs  pipeline.rs  vad.rs  whisper.rs
src-tauri/src/transcription/cloud/: catalog.rs  deepgram.rs  elevenlabs.rs  gemini.rs  groq.rs  http.rs  mistral.rs  mod.rs  provider.rs  registry.rs  soniox.rs  speechmatics.rs
src-tauri/src/transcription/cloud/streaming/: deepgram.rs  elevenlabs.rs  mistral.rs  mod.rs  registry.rs  service.rs  session.rs  soniox.rs  speechmatics.rs
src/components/: AudioMeterBar.tsx  CloudProvidersPanel.tsx  CompactHero.tsx  DashboardPanel.tsx  DictionaryPanel.tsx  EnhancementPanel.tsx  EnhancementScreenContext.tsx  HistoryPanel.tsx  LlmLocalPanel.tsx  MiniRecorderView.tsx  ModelsPage.tsx  ModelsPanel.tsx  Onboarding.tsx  ParakeetPanel.tsx  PermissionsPanel.tsx  PostProcessingPanel.tsx  PowerModePanel.tsx  PromptEditor.tsx  RecorderPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  TranscribePanel.tsx  TranscriptionSourcePanel.tsx  UpdateChecker.tsx  VadPanel.tsx
src/components/ui/: button.tsx  info-tip.tsx  popover.tsx  sheet.tsx
src/hooks/: useCopyButton.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  es.json  fr.json
src/lib/: tauri.ts
